--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
@@ -34,7 +35,9 @@ android {
     buildFeatures {
         dataBinding true
     }
-
+    kapt {
+        correctErrorTypes true
+    }
 }
 
 dependencies {
@@ -57,6 +60,9 @@ dependencies {
 
     def work_version = "2.8.1"
     implementation "androidx.work:work-runtime-ktx:$work_version"
+
+    implementation "com.google.dagger:hilt-android:2.44"
+    kapt "com.google.dagger:hilt-compiler:2.44"
 
 
     implementation 'androidx.core:core-ktx:1.10.1'
